# slop-guard

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
engine/: Cargo.toml
engine/src/: lib.rs  main.rs  protocol.rs  scan.rs
engine/src/analysis/: ast.rs  complexity.rs  idioms.rs  mod.rs  patterns.rs
engine/src/analysis/ast/: complexity.rs  detectors.rs  evidence.rs  language.rs  mod.rs  parse_cache.rs  utils.rs
engine/src/analysis/cfg/: builder.rs  ir.rs  lang.rs  mod.rs  rules.rs  util.rs
engine/src/analysis/cfg/lang/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs
engine/tests/: cfg_async_blocking.rs
examples/: sample.js
extension/: .vscodeignore  README.md  package-lock.json  package.json
extension/runtime/: README.md
extension/runtime/wasm/: slopguard_engine.wasm
extension/src/: cliUserInstall.ts  config.ts  engineClient.ts  extension.ts  firstRun.ts  llmClient.ts  output.ts  scope.ts  types.ts  wasmEngineClient.ts  workspaceContext.ts
extension/src/commands/: analyzeSelection.ts  analyzeWorkspace.ts  engineCli.ts  quickActions.ts  symbolImpact.ts
scripts/: slopguard-pre-commit.example.sh
